--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.11.0",
     "date-fns": "^4.1.0",
     "expo": "~54.0.32",
     "expo-asset": "~12.0.12",
