--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json}\"",
-    "test": "jest",
-    "detox:build": "detox build -c android.emu.debug",
-    "detox:test": "detox test -c android.emu.debug",
-    "detox:test:debug": "detox test -c android.emu.debug --loglevel trace"
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json}\""
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -22,9 +18,8 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.32",
+    "expo": "~54.0.33",
     "expo-asset": "~12.0.12",
-    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.11",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
@@ -36,13 +31,10 @@
     "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
+    "@types/jest": "29.5.14",
     "@types/react": "~19.1.0",
-    "detox": "^20.47.0",
-    "detox-cli": "^20.47.0",
-    "jest": "^30.2.0",
+    "jest": "~29.7.0",
     "prettier": "^3.8.1",
-    "react-test-renderer": "^19.1.0",
     "typescript": "~5.9.2"
   },
   "private": true
