--- a/app.json
+++ b/app.json
@@ -18,9 +18,13 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffee"
+        "backgroundColor": "#000000"
       },
-      "edgeToEdgeEnabled": true,
+      "androidStatusBar": {
+        "backgroundColor": "#000ee0",
+        "translucent": false
+      },
+      "edgeToEdgeEnabled": false,
       "predictiveBackGestureEnabled": false,
       "package": "com.wasulisp.todolist"
     },
