--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json}\""
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json}\"",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -19,6 +26,7 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "date-fns": "^4.1.0",
+    "eslint-config-expo": "~10.0.0",
     "expo": "~54.0.33",
     "expo-asset": "~12.0.12",
     "expo-font": "~14.0.11",
@@ -34,7 +42,11 @@
   "devDependencies": {
     "@types/jest": "29.5.14",
     "@types/react": "~19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "eslint-plugin-react": "^7.37.5",
+    "husky": "^9.1.7",
     "jest": "~29.7.0",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
     "typescript": "~5.9.2"
   },
